# rust-react-app

api/: Cargo.toml
api/models/: Cargo.toml
api/models/src/: lib.rs  user.rs
api/src/: main.rs  user.rs
api/src/libs/: error.rs
client/: package.json
client/src/: App.js
