[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
jwt-authorizer = "0.10.0"
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.1", features = ["full"] }
tower-service = "0.3.2"
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-json" ] }
serde = "1.0.164"
